apps/monitoring/grafana-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: monitoring
spec:
  hosts:
    - "grafana.jacky3.com"
  gateways:
    - monitoring-gateway
  http:
    - route:
        - destination:
            host: grafana
            port:
              number: 3000
