apps/monitoring/jaeger-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: jaeger-vs
  namespace: istio-system
spec:
  hosts:
    - "jaeger.jacky3.com"
  gateways:
    - monitoring-gateway
  http:
    - route:
        - destination:
            host: jaeger
            port:
              number: 16686
