apps/monitoring/kiali-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kiali-vs
  namespace: istio-system
spec:
  hosts:
    - "kiali.jacky3.com"
  gateways:
    - monitoring-gateway
  http:
    - route:
        - destination:
            host: kiali
            port:
              number: 20001
